@@ -9,11 +9,11 @@ package org.elasticsearch.xpack.security;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.PlainActionFuture;
-import org.elasticsearch.common.collect.MapBuilder;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.license.MockLicenseState;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TcpTransport;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xcontent.ToXContent;
@@ -149,10 +149,7 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
         final boolean httpIpFilterEnabled = randomBoolean();
         final boolean transportIPFilterEnabled = randomBoolean();
         when(ipFilter.usageStats()).thenReturn(
-            MapBuilder.<String, Object>newMapBuilder()
-                .put("http", Collections.singletonMap("enabled", httpIpFilterEnabled))
-                .put("transport", Collections.singletonMap("enabled", transportIPFilterEnabled))
-                .map()
+            Map.of("http", Map.of("enabled", httpIpFilterEnabled), "transport", Map.of("enabled", transportIPFilterEnabled))
         );
 
         final boolean rolesStoreEnabled = randomBoolean();
@@ -380,7 +377,7 @@ public class SecurityInfoTransportActionTests extends ESTestCase {
         return new SecurityUsageTransportAction(
             mock(TransportService.class),
             null,
-            null,
+            mock(ThreadPool.class),
             mock(ActionFilters.class),
             null,
             settings,
